fix about component on mobile view

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -230,7 +230,7 @@
 
 .about__content {
   position: relative;
-  z-index: 2;
+  z-index: 10;
   width: 100%;
   max-width: 100%;
   background: rgba(255, 255, 255, 0.65);
